# VibeGPT

./: .env.example  .gitignore  LICENSE  README.md  Setting Up VibeGPT Repository.md  TESTING_GUIDE.txt
docs/: api.md  (+6 more)
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: .gitkeep  30967e1d5b0e_add_embedding_column_to_document_chunks.py  78af08a344ac_init_and_add_vector_extension.py  ae5e54fd249e_initial_migration.py
services/api/app/: __init__.py  main.py  storage.py
services/api/app/api/: __init__.py
services/api/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  rate_limit.py  security.py
services/api/app/database/: __init__.py  base.py  init_db.py  session.py
services/api/app/document_processing/: __init__.py  chunker.py  extraction.py  parsers.py  pipeline.py  service.py
services/api/app/models/: __init__.py  academic.py  answer_rule.py  document.py  question.py  system.py  user.py
services/api/app/rag/: __init__.py  answer_service.py  embedding.py  generation.py  ollama_client.py  prompt_builder.py  retrieval.py
services/api/app/repositories/: __init__.py
services/api/app/schemas/: __init__.py  academic.py  auth.py  common.py  document.py  question.py
services/api/app/services/: __init__.py  embedding.py
services/api/app/workers/: __init__.py  (+1 more)
services/api/scripts/: reset_dev_admin_password.py
services/api/tests/: conftest.py  test_answer_service.py  test_auth_routes.py  test_init_db.py  test_ollama_client.py  test_storage.py
(+83 files in other folders)
