[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibegpt-api"
version = "0.1.0"
description = "VibeGPT Campus Study Agent - FastAPI Backend"
requires-python = ">=3.11"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "alembic*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",
    "UP037",  # Defer quote removal which breaks SQLAlchemy forward-refs
    "UP042",  # Defer StrEnum conversion for Python 3.10 compatibility
    "UP017",  # Defer datetime.UTC conversion for Python 3.10 compatibility
]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]  # SQLAlchemy forward-refs are flagged as undefined by linters

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
